--- a/interfaces/History.ui
+++ b/interfaces/History.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1151</width>
-    <height>749</height>
+    <height>743</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -80,7 +80,7 @@ background-color:gray;
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>3</number>
          </property>
          <property name="iconSize">
           <size>
@@ -1748,7 +1748,7 @@ border:2px solid rgb(0,0,0);
              <property name="frameShadow">
               <enum>QFrame::Raised</enum>
              </property>
-             <layout class="QVBoxLayout" name="verticalLayout_28">
+             <layout class="QVBoxLayout" name="verticalLayout_25">
               <item>
                <layout class="QVBoxLayout" name="verticalLayout_15">
                 <property name="spacing">
@@ -1839,9 +1839,9 @@ border:2px solid rgb(0,0,0);
                </layout>
               </item>
               <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_24">
+               <layout class="QHBoxLayout" name="horizontalLayout_23">
                 <item>
-                 <layout class="QVBoxLayout" name="verticalLayout_27">
+                 <layout class="QVBoxLayout" name="verticalLayout_21">
                   <item>
                    <layout class="QVBoxLayout" name="verticalLayout_20">
                     <item>
@@ -1952,168 +1952,54 @@ border:2px solid rgb(0,0,0);
                    </layout>
                   </item>
                   <item>
-                   <layout class="QHBoxLayout" name="horizontalLayout_23">
+                   <layout class="QVBoxLayout" name="verticalLayout_19">
                     <item>
-                     <layout class="QVBoxLayout" name="verticalLayout_19">
-                      <item>
-                       <layout class="QVBoxLayout" name="verticalLayout_21">
-                        <item>
-                         <widget class="QLabel" name="lbl_33">
-                          <property name="minimumSize">
-                           <size>
-                            <width>0</width>
-                            <height>40</height>
-                           </size>
-                          </property>
-                          <property name="maximumSize">
-                           <size>
-                            <width>16777215</width>
-                            <height>40</height>
-                           </size>
-                          </property>
-                          <property name="text">
-                           <string>Diagnostico del paciente</string>
-                          </property>
-                          <property name="alignment">
-                           <set>Qt::AlignCenter</set>
-                          </property>
-                         </widget>
-                        </item>
-                        <item>
-                         <widget class="QTextEdit" name="diag">
-                          <property name="minimumSize">
-                           <size>
-                            <width>560</width>
-                            <height>160</height>
-                           </size>
-                          </property>
-                          <property name="maximumSize">
-                           <size>
-                            <width>400</width>
-                            <height>160</height>
-                           </size>
-                          </property>
-                         </widget>
-                        </item>
-                       </layout>
-                      </item>
-                      <item>
-                       <layout class="QVBoxLayout" name="verticalLayout_26">
-                        <item>
-                         <widget class="QLabel" name="lbl_35">
-                          <property name="text">
-                           <string>Diagnosticos</string>
-                          </property>
-                          <property name="alignment">
-                           <set>Qt::AlignCenter</set>
-                          </property>
-                          <property name="wordWrap">
-                           <bool>false</bool>
-                          </property>
-                         </widget>
-                        </item>
-                        <item>
-                         <widget class="QFrame" name="frame_4">
-                          <property name="styleSheet">
-                           <string notr="true">QFrame
-{
-	background-color: rgb(255, 255, 255);
-}</string>
-                          </property>
-                          <property name="frameShape">
-                           <enum>QFrame::StyledPanel</enum>
-                          </property>
-                          <property name="frameShadow">
-                           <enum>QFrame::Raised</enum>
-                          </property>
-                          <layout class="QVBoxLayout" name="verticalLayout_25">
-                           <property name="spacing">
-                            <number>0</number>
-                           </property>
-                           <property name="leftMargin">
-                            <number>0</number>
-                           </property>
-                           <property name="topMargin">
-                            <number>0</number>
-                           </property>
-                           <property name="rightMargin">
-                            <number>0</number>
-                           </property>
-                           <property name="bottomMargin">
-                            <number>0</number>
-                           </property>
-                           <item>
-                            <widget class="QTableWidget" name="tabla_diag">
-                             <property name="minimumSize">
-                              <size>
-                               <width>0</width>
-                               <height>280</height>
-                              </size>
-                             </property>
-                             <property name="maximumSize">
-                              <size>
-                               <width>16777215</width>
-                               <height>280</height>
-                              </size>
-                             </property>
-                             <property name="rowCount">
-                              <number>8</number>
-                             </property>
-                             <attribute name="horizontalHeaderStretchLastSection">
-                              <bool>true</bool>
-                             </attribute>
-                             <attribute name="verticalHeaderShowSortIndicator" stdset="0">
-                              <bool>false</bool>
-                             </attribute>
-                             <attribute name="verticalHeaderStretchLastSection">
-                              <bool>true</bool>
-                             </attribute>
-                             <row/>
-                             <row/>
-                             <row/>
-                             <row/>
-                             <row/>
-                             <row/>
-                             <row/>
-                             <row/>
-                             <column>
-                              <property name="text">
-                               <string>Fecha y Hora</string>
-                              </property>
-                             </column>
-                             <column>
-                              <property name="text">
-                               <string>Nombre</string>
-                              </property>
-                             </column>
-                             <column>
-                              <property name="text">
-                               <string>Apellido</string>
-                              </property>
-                             </column>
-                             <column>
-                              <property name="text">
-                               <string>Diagnostico</string>
-                              </property>
-                             </column>
-                            </widget>
-                           </item>
-                          </layout>
-                         </widget>
-                        </item>
-                       </layout>
-                      </item>
-                     </layout>
+                     <widget class="QLabel" name="lbl_33">
+                      <property name="minimumSize">
+                       <size>
+                        <width>0</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                      <property name="text">
+                       <string>Diagnostico del paciente</string>
+                      </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                     </widget>
                     </item>
                     <item>
-                     <spacer name="horizontalSpacer_9">
+                     <widget class="QTextEdit" name="diag">
+                      <property name="minimumSize">
+                       <size>
+                        <width>560</width>
+                        <height>160</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>400</width>
+                        <height>160</height>
+                       </size>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <spacer name="verticalSpacer_4">
                       <property name="orientation">
-                       <enum>Qt::Horizontal</enum>
+                       <enum>Qt::Vertical</enum>
                       </property>
                       <property name="sizeHint" stdset="0">
                        <size>
-                        <width>40</width>
-                        <height>20</height>
+                        <width>20</width>
+                        <height>40</height>
                        </size>
                       </property>
                      </spacer>
@@ -2121,6 +2007,19 @@ border:2px solid rgb(0,0,0);
                    </layout>
                   </item>
                  </layout>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacer_9">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
                 </item>
                 <item>
                  <widget class="Line" name="line_5">
