--- a/interfaces/History.ui
+++ b/interfaces/History.ui
@@ -80,7 +80,7 @@ background-color:gray;
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>3</number>
+          <number>2</number>
          </property>
          <property name="iconSize">
           <size>
@@ -1779,54 +1779,6 @@ border:2px solid rgb(0,0,0);
                     </property>
                    </spacer>
                   </item>
-                  <item>
-                   <widget class="QLineEdit" name="in_busqueda_2">
-                    <property name="minimumSize">
-                     <size>
-                      <width>200</width>
-                      <height>40</height>
-                     </size>
-                    </property>
-                    <property name="maximumSize">
-                     <size>
-                      <width>200</width>
-                      <height>16777215</height>
-                     </size>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QPushButton" name="btn_buscar_2">
-                    <property name="minimumSize">
-                     <size>
-                      <width>80</width>
-                      <height>40</height>
-                     </size>
-                    </property>
-                    <property name="maximumSize">
-                     <size>
-                      <width>80</width>
-                      <height>16777215</height>
-                     </size>
-                    </property>
-                    <property name="styleSheet">
-                     <string notr="true"/>
-                    </property>
-                    <property name="text">
-                     <string/>
-                    </property>
-                    <property name="icon">
-                     <iconset>
-                      <normaloff>../../../../.designer/backup/ELEMENTOS GRAFICOS/buscar.png</normaloff>../../../../.designer/backup/ELEMENTOS GRAFICOS/buscar.png</iconset>
-                    </property>
-                    <property name="iconSize">
-                     <size>
-                      <width>30</width>
-                      <height>30</height>
-                     </size>
-                    </property>
-                   </widget>
-                  </item>
                  </layout>
                 </item>
                 <item>
@@ -1867,17 +1819,27 @@ border:2px solid rgb(0,0,0);
                        </spacer>
                       </item>
                       <item>
-                       <widget class="QDateTimeEdit" name="fecha_hora">
+                       <widget class="QDateEdit" name="fecha">
                         <property name="minimumSize">
                          <size>
                           <width>130</width>
                           <height>30</height>
                          </size>
                         </property>
-                        <property name="maximumSize">
+                        <property name="baseSize">
                          <size>
-                          <width>30</width>
-                          <height>130</height>
+                          <width>130</width>
+                          <height>30</height>
+                         </size>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QTimeEdit" name="hora">
+                        <property name="minimumSize">
+                         <size>
+                          <width>130</width>
+                          <height>30</height>
                          </size>
                         </property>
                        </widget>
