--- a/interfaces/History.ui
+++ b/interfaces/History.ui
@@ -80,7 +80,7 @@ background-color:gray;
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>3</number>
+          <number>2</number>
          </property>
          <property name="iconSize">
           <size>
@@ -1822,14 +1822,14 @@ border:2px solid rgb(0,0,0);
                        <widget class="QDateEdit" name="fecha">
                         <property name="minimumSize">
                          <size>
-                          <width>130</width>
-                          <height>30</height>
+                          <width>120</width>
+                          <height>40</height>
                          </size>
                         </property>
-                        <property name="baseSize">
+                        <property name="maximumSize">
                          <size>
-                          <width>130</width>
-                          <height>30</height>
+                          <width>120</width>
+                          <height>16777215</height>
                          </size>
                         </property>
                        </widget>
@@ -1838,8 +1838,8 @@ border:2px solid rgb(0,0,0);
                        <widget class="QTimeEdit" name="hora">
                         <property name="minimumSize">
                          <size>
-                          <width>130</width>
-                          <height>30</height>
+                          <width>120</width>
+                          <height>40</height>
                          </size>
                         </property>
                        </widget>
